app/styles/02-components/01-modules/_map.styl
#map
  position absolute
  top 0
  left 0
  width 2002px
  height 1500px
  transform translate3d(0,0,0)
  background url(../images/Map2.png) no-repeat
  overflow hidden
  perspective 400

#drawCanvas
  position absolute
  top 0
  left 0
  width 5769px
  height 4102px

#snowCanvas
  position absolute
  top 0
  left 0
  width 100%
  height 100%
  pointer-events none

.obstruction
  position absolute
  transition all .3s

.whiteboard.mini 
  perspective-origin 200% center
  position fixed
  perspective 1500
  top: 835px
  left: 1620px
  z-index: 9999
  canvas
    transform: rotateX(54deg)
    width: 113px
    height: 90px
    background: white
    
#whiteboardCanvas
  border 1px solid #333
  
    

